# docs/swagger.yaml
@@ -60,6 +60,25 @@ definitions:
     - password
     - username
     type: object
+  entities.Rent:
+    properties:
+      finalPrice:
+        type: number
+      id:
+        type: integer
+      priceOfUnit:
+        type: number
+      priceType:
+        type: string
+      timeEnd:
+        type: string
+      timeStart:
+        type: string
+      transportId:
+        type: integer
+      userId:
+        type: integer
+    type: object
   entities.Transport:
     properties:
       canBeRented:
@@ -108,6 +127,27 @@ definitions:
       err:
         example: error occures
         type: string
+    type: object
+  rentHandler.AdminCreateRent.rentData:
+    properties:
+      priceOfUnit:
+        type: number
+      priceType:
+        type: string
+      timeEnd:
+        type: string
+      timeStart:
+        type: string
+      transportId:
+        type: integer
+      userId:
+        type: integer
+    required:
+    - priceOfUnit
+    - priceType
+    - timeStart
+    - transportId
+    - userId
     type: object
   transportHandler.AdminCreateTransport.transportData:
     properties:
@@ -643,6 +683,77 @@ paths:
       summary: Обновление данных пользователя
       tags:
       - 2. AdminAccountController
+  /api/Admin/Rent:
+    post:
+      consumes:
+      - application/json
+      description: Аредна транспорта с id = transportId пользователем с id = userId
+      parameters:
+      - description: rent data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/rentHandler.AdminCreateRent.rentData'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entities.Rent'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Создание аренды
+      tags:
+      - AdminRentController
+  /api/Admin/Rent/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Получение аренды с id = {id}
+      parameters:
+      - description: Transport id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Rent'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Получение аренды
+      tags:
+      - AdminRentController
   /api/Admin/Transport:
     get:
       description: Получение count транспортных средств с id >= start с типом транспорта
@@ -855,6 +966,49 @@ paths:
       summary: Пополнение баланса
       tags:
       - 3. PaymentController
+  /api/Rent/Transport:
+    get:
+      description: Получение транспорта доступного для аренды по параметрам его расположения
+        и типу транспорта
+      parameters:
+      - description: lat
+        in: query
+        name: lat
+        required: true
+        type: number
+      - description: radius
+        in: query
+        name: radius
+        required: true
+        type: number
+      - description: long
+        in: query
+        name: long
+        required: true
+        type: number
+      - description: transportType
+        in: query
+        name: transportType
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entities.Transport'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpUtil.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Транспорт для аренды
+      tags:
+      - RentController
   /api/Transport:
     post:
       consumes:
